# krkrz

./: .gitignore  BuildProjects.bat  CMakeLists.txt  GenerateProjects.bat  README.md  vcpkg.json
base/: BinaryStream.cpp  TextStream.cpp  XP3Archive.cpp
base/win32/: FuncStubs.cpp  PluginImpl.cpp  StorageImpl.cpp
environ/win32/: WindowFormUnit.cpp
movie/win32/: MFPlayer.cpp
msg/win32/: ReadOptionDesc.cpp
sound/: MathAlgorithms.h  WaveFormatConverter_SSE.cpp  xmmlib.h
tjs2/: tjsArray.cpp  tjsConfig.h  tjsDate.cpp  tjsInterCodeExec.cpp  tjsLex.cpp  tjsRegExp.h
vcproj/: tvpwin32.sln  tvpwin32.vcxproj
visual/: ComplexRect.cpp  FreeType.cpp  FreeTypeFontRasterizer.cpp  GraphicsLoaderIntf.cpp  LayerBitmapImpl.cpp  LayerBitmapImpl.h  LayerIntf.cpp  LoadJPEG.cpp  LoadPNG.cpp
visual/gl/: aligned_allocator.h  simd_def_x86x64.h
visual/opengl/: OpenGLHeader.h
visual/win32/: SDLInputMgr.cpp  SDLInputMgr.h
